sumo/tests/sumo/output/e3/errors/id_empty/errors.sumo
Error: Missing id of a 'e3-detector'-object.
Quitting (on error).
